--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,6 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 1000
-
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+          access-token: ${{ secrets.ACCESS_TOKEN }}
+          organization-slugs: ${{ secrets.ORGANIZATION_SLUGS }}
+          enterprise-slug: ${{ secrets.ENTERPRISE_SLUGS }}   # Replace with your enterprise slug (optional)
