--- a/package.json
+++ b/package.json
@@ -23,16 +23,14 @@
   "engines": {
     "node": ">=20"
   },
-  "type": "module",
   "scripts": {
     "bundle": "npm run format:write && npm run package",
-    "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "npx ncc build src/index.js -o dist --source-map --license licenses.txt",
     "package:watch": "npm run package -- --watch",
-    "all": "npm run format:write && npm run lint && npm run coverage && npm run package"
+    "all": "npm run format:write && npm run lint && npm run package"
   },
   "license": "MIT",
   "eslintConfig": {
