--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,6 @@ jobs:
         id: test-action
         uses: ./
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
           organization-slugs: ${{ secrets.ORGANIZATION_SLUGS }}
           enterprise-slug: ${{ secrets.ENTERPRISE_SLUGS }} # Replace with your enterprise slug (optional)
